imgdir = ${IMG_DIR}

img_DATA = \
	icon.png \
	background.png \
	cloud.png \
	cow_black_tile.png \
	cow_black_left.png \
	cow_black.png \
	cow_brown_left.png \
	cow_brown.png \
	cow_orange_left.png \
	cow_orange.png \
	cow_red_left.png \
	cow_red.png \
	cow_white_left.png \
	cow_white.png \
	cow_yellow_left.png \
	cow_yellow.png \
	cow_yellow_with_red_outline_left.png \
	cow_yellow_with_red_outline.png \
	kangaroo_black_left.png \
	kangaroo_black.png \
	kangaroo_grey_left.png \
	kangaroo_grey.png \
	kangaroo_red_left.png \
	kangaroo_red.png

nobase_img_DATA = cow_black/info \
	cow_black/1.png \
	cow_black/2.png \
	cow_black/3.png

EXTRA_DIST = \
  .cvsignore \
  ${img_DATA}
