imgdir = ${pkgdatadir}/img

img_DATA = \
	icon.png

nobase_img_DATA = \
	background/info \
	background/1.png \
	cloud/info \
	cloud/1.png \
	cow_black/info \
	cow_black/1.png \
	cow_black/2.png \
	cow_black/3.png \
	cow_black_left/info \
	cow_black_left/1.png \
	cow_brown/info \
	cow_brown/1.png \
	cow_brown_left/info \
	cow_brown_left/1.png \
	cow_orange/info \
	cow_orange/1.png \
	cow_orange_left/info \
	cow_orange_left/1.png \
	cow_red/info \
	cow_red/1.png \
	cow_red_left/info \
	cow_red_left/1.png \
	cow_white/info \
	cow_white/1.png \
	cow_white_left/info \
	cow_white_left/1.png \
	cow_yellow/info \
	cow_yellow/1.png \
	cow_yellow_left/info \
	cow_yellow_left/1.png \
	cow_yellow_with_red_outline/info \
	cow_yellow_with_red_outline/1.png \
	cow_yellow_with_red_outline_left/info \
	cow_yellow_with_red_outline_left/1.png \
	kangaroo_black/info \
	kangaroo_black/1.png \
	kangaroo_black_left/info \
	kangaroo_black_left/1.png \
	kangaroo_grey/info \
	kangaroo_grey/1.png \
	kangaroo_grey_left/info \
	kangaroo_grey_left/1.png \
	kangaroo_red/info \
	kangaroo_red/1.png \
	kangaroo_red_left/info \
	kangaroo_red_left/1.png

EXTRA_DIST = \
  .cvsignore \
  ${img_DATA}
